# groundingDINO_CLIP

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260330_000001_initial_schema.py
app/: __init__.py  dependencies.py  main.py
app/api/routes/: __init__.py
app/core/: __init__.py  config.py
app/db/: __init__.py  session.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py  api.py
app/services/: jina.py  jobs.py  llm.py  logo_detector.py  logo_llm_classifier.py  logo_pipeline.py  net.py  qdrant_store.py  storage.py
app/utils/: images.py
scripts/: evaluate_logo_classification.py  evaluate_logo_classification_llm.py
web/: index.html
